; ModuleID = '/home/carl/AnghaBench/memcached/extr_itoa_ljust.c_itoa_u64.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_itoa_ljust.c_itoa_u64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @itoa_u64(i32 %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %9 = load i32, i32* %4, align 4
  store i32 %9, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = load i32, i32* %4, align 4
  %12 = icmp eq i32 %10, %11
  br i1 %12, label %13, label %17

13:                                               ; preds = %2
  %14 = load i32, i32* %7, align 4
  %15 = load i8*, i8** %5, align 8
  %16 = call i8* @itoa_u32(i32 %14, i8* %15)
  store i8* %16, i8** %3, align 8
  br label %37

17:                                               ; preds = %2
  %18 = load i32, i32* %4, align 4
  %19 = sdiv i32 %18, 1000000000
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %8, align 4
  %21 = load i8*, i8** %5, align 8
  %22 = call i8* @itoa_u64(i32 %20, i8* %21)
  store i8* %22, i8** %5, align 8
  %23 = load i32, i32* %4, align 4
  %24 = load i32, i32* %8, align 4
  %25 = mul nsw i32 %24, 1000000000
  %26 = sub nsw i32 %23, %25
  store i32 %26, i32* %7, align 4
  %27 = load i32, i32* %7, align 4
  %28 = sdiv i32 %27, 100000000
  store i32 %28, i32* %6, align 4
  %29 = load i32, i32* %6, align 4
  %30 = add nsw i32 48, %29
  %31 = load i8*, i8** %5, align 8
  %32 = call i8* @out1(i32 %30, i8* %31)
  store i8* %32, i8** %5, align 8
  %33 = load i32, i32* %7, align 4
  %34 = load i8*, i8** %5, align 8
  %35 = load i32, i32* %6, align 4
  %36 = call i8* @itoa(i32 %33, i8* %34, i32 %35, i32 9)
  store i8* %36, i8** %3, align 8
  br label %37

37:                                               ; preds = %17, %13
  %38 = load i8*, i8** %3, align 8
  ret i8* %38
}

declare dso_local i8* @itoa_u32(i32, i8*) #1

declare dso_local i8* @out1(i32, i8*) #1

declare dso_local i8* @itoa(i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
